:bug:(Audio Layout on Mobile) should be fixed, then should be absolute on pc

--- a/src/components/Audio/Audio.less
+++ b/src/components/Audio/Audio.less
@@ -3,10 +3,14 @@
 * @Date:   2017-03-05T17:27:09+08:00
 * @Email:  uniquecolesmith@gmail.com
 * @Last modified by:   eason
-* @Last modified time: 2017-03-07T01:18:31+08:00
+* @Last modified time: 2017-03-31T21:48:00+08:00
 * @License: MIT
 * @Copyright: Eason(uniquecolesmith@gmail.com)
 */
+
+.normal {
+  position: fixed;
+}
 
 .playlistMask {
   // display: none;
@@ -26,4 +30,10 @@
 
 .playlistActive {
   height: 55%;
+}
+
+@media (min-width: 450px) {
+  .normal {
+    position: absolute;
+  }
 }
